--- a/index.html
+++ b/index.html
@@ -12,7 +12,32 @@
 </head>
 
 <body>
+    <nav>
+        <div>
+            <ul>
+                <li><span class="active-page">Accueil</span></li>
+                <li>La méthode</li>
+                <li>Les formations</li>
+            </ul>
+        </div>
+        <img src="ressources/logo.svg" alt="Logo O'Clock">
+        <div>
+            <ul>
+                <li>La team</li>
+                <li>Le blog</li>
+                <li>Espace entreprises</li>
+            </ul>
+            <button>Je m'inscris</button>
+
+        </div>
+    </nav>
+    <main>
+        <section>
     
+        </section>
+
+    </main>
+
     <script src="app.js"></script>
 </body>
 
