issue fixed => img php (sensible à la casse)

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <img src="ressources/html.svg" alt="logo HTML5" data-logo="HTML5">
                     <img src="ressources/react.svg" alt="logo React" data-logo="React">
                     <img src="ressources/js.svg" alt="logo Javascript" data-logo="js">
-                    <img src="ressources/PHP.svg" alt="logo PHP" data-logo="PHP">
+                    <img src="ressources/php.svg" alt="logo PHP" data-logo="PHP">
                     <img src="ressources/symfo.svg" alt="logo Symfony" data-logo="symfony">
                 </div>
                 
